# modbus-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  adu_8hpp.html  annotated.html  asio2_8hpp.html  bit-read_8hpp.html  bit-read_8inline_8hpp.html  bit-write_8hpp.html  classmodbus_1_1block_1_1base.html  classmodbus_1_1block_1_1sequential.html  classmodbus_1_1ex_1_1base__error.html  classmodbus_1_1ex_1_1internal.html  classmodbus_1_1ex_1_1specification.html  classmodbus_1_1ex_1_1specification__error.html  classmodbus_1_1internal_1_1adu.html  classmodbus_1_1internal_1_1base__metadata__t.html  classmodbus_1_1internal_1_1request.html  classmodbus_1_1internal_1_1response.html  classmodbus_1_1logger.html  classmodbus_1_1num__bits__t.html  classmodbus_1_1num__regs__t.html  classmodbus_1_1request_1_1base__read__bits.html  classmodbus_1_1request_1_1base__read__registers.html  classmodbus_1_1request_1_1illegal.html  classmodbus_1_1request_1_1mask__write__register.html  classmodbus_1_1request_1_1read__write__multiple__registers.html  classmodbus_1_1request_1_1write__multiple__coils.html  classmodbus_1_1request_1_1write__multiple__registers.html  classmodbus_1_1request_1_1write__single__coil.html  classmodbus_1_1request_1_1write__single__register.html  classmodbus_1_1request__handler.html  classmodbus_1_1response_1_1base__read__bits.html  classmodbus_1_1response_1_1base__read__registers.html  classmodbus_1_1response_1_1error.html  (+50 more)
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
cmake/: Asio2.cmake  Boost.cmake  tools.cmake
documentation/: CMakeLists.txt
include/modbuscpp/: modbus.hpp
include/modbuscpp/details/: adu.hpp  asio2.hpp  bit-read.hpp  bit-read.inline.hpp  bit-write.hpp  constants.hpp  data-table.hpp  data-table.inline.hpp  exception.hpp  logger.hpp  register-read.hpp  register-read.inline.hpp  register-write.hpp  request-handler.hpp  request.hpp  response.hpp  server.hpp  struct.hpp  types.hpp  utilities.hpp
include/modbuscpp/modbuscpp/: adu.hpp  bit-read.hpp  bit-write.hpp  constants.hpp  data-table.hpp  data-table.inline.hpp  logger.hpp  operation.hpp  register-read.inline.hpp  register-write.hpp  server.hpp  struct.hpp  types.hpp  utilities.hpp
source/: adu.cpp  bit-read.cpp  bit-write.cpp  data-table.cpp  logger.cpp  operation.cpp  register-read.cpp  register-write.cpp  request-handler.cpp  request.cpp  response.cpp  server.cpp
standalone/: CMakeLists.txt
standalone/source/: client.cpp  server.cpp
test/: CMakeLists.txt
test/source/: meta.cpp
